fix: change color of primary button text to a high contrast color
- changed the color as per the guidelines of WCAG

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -23,7 +23,7 @@
 
 .primary-btn {
   --btn-bg: var(--primary);
-  --btn-text: var(--tertiary);
+  --btn-text: var(--active);
 }
 
 .secondary-btn {
